セット図修正

--- a/md/セット図.md
+++ b/md/セット図.md
@@ -7,7 +7,7 @@ B[Keyboard\nnord electro]
 C[PC\nMacbook Pro]
 D[Audio Interface\nUR44]
 E[DJ Pad\nKAOSS PAD]
-F[Sampler\nMPC Live]
+F[Sampler\nMPX16]
 
 B==>D
 C-->D
