インターフェース名変更

--- a/md/セット図.md
+++ b/md/セット図.md
@@ -5,7 +5,7 @@ flowchart TD
 A[PA]
 B[Keyboard\nnord electro]
 C[PC\nMacbook Pro]
-D[Audio Interface\nUR44]
+D[Audio Interface\nUR24C]
 E[DJ Pad\nKAOSS PAD]
 F[Sampler\nMPX16]
 
@@ -23,7 +23,7 @@ flowchart TD
 A[PA]
 B[Keyboard\nnord electro]
 C[PC\nMacbook Pro]
-D[Audio Interface\nUR44]
+D[Audio Interface\nUR24C]
 
 B==>D
 C-->D
